--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <!-- logo pagina -->
-<center><img src="\logopagina\LOGOFIN.jpg"></center>
+<center><img src="\logopagina\LOGOFIN.JPG"></center>
 
 <!-- imagen de fondo e inicio del body -->
 
