--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- titulo ICONO https://icon-icons.com/es/ -->
 <head>
   <TITLE>PROYECTO 5G</TITLE>
-<link rel="shortcut icon" href="\clase programacion\PROYECTO PAGINA\icono\devil2.ico">
+<link rel="shortcut icon" href="\icono\devil2.ico">
 </head>
 
 <!-- logo pagina -->
