--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- imagen de fondo e inicio del body -->
 
-<body background="\clase programacion\PROYECTO PAGINA\imagenes\fondo.jpg" bgcolor="FFCECB">
+<body background="\imagenes\fondo.jpg" bgcolor="FFCECB">
 
 
 <!-- TEXTO CENTRADO DESCRIPCION DE LA PAGINA -->
@@ -24,7 +24,7 @@
 
 <!-- IMAGENES Y EVENTOS DE LA PAGINA -->
 <center>
-<img src="\clase programacion\PROYECTO PAGINA\eventos\ms21oct.jpg" alt="error en la imagen" width="550" height="550">
+<img src="\eventos\ms21oct.jpg" alt="error en la imagen" width="550" height="550">
 </center>
 
 <br>
