--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br>
 
 <center>
-<img src="\clase programacion\PROYECTO PAGINA\eventos\nata27oct.jpg" alt="error en la imagen" width="500" height="550">
+<img src="\eventos\nata27oct.jpg" alt="error en la imagen" width="500" height="550">
 </center>
 
 <br>
@@ -51,12 +51,12 @@
 <br>
 
 <center>
-<img src="\clase programacion\PROYECTO PAGINA\eventos\sanz29oct.jpg" alt="error en la imagen" width="550" height="550">
+<img src="\eventos\sanz29oct.jpg" alt="error en la imagen" width="550" height="550">
 </center>
 
 
 <center>
-<img src="\clase programacion\PROYECTO PAGINA\eventos\teme24.jpg" alt="error en la imagen" width="550" height="550" align="center"/>
+<img src="\eventos\teme24.jpg" alt="error en la imagen" width="550" height="550" align="center"/>
 </center>
 
 <!-- video centrado -->
@@ -68,7 +68,7 @@
 <!-- musica https://y2down.cc/es/youtube-mp3.html-->
 <center>
 <audio controls>
-    <source src="\clase programacion\PROYECTO PAGINA\musica\Xavi1.mp3" type="audio/mp3">
+    <source src="\musica\Xavi1.mp3" type="audio/mp3">
         Tu navegador no soporta audio HTML5.
 </audio>
 </center>
