--- a/pagina2.html
+++ b/pagina2.html
@@ -6,5 +6,9 @@
 <BODY>
   <H4> ESTA ES LA SEGUNDA PAGINA DEL PROYECTO</H4>
   <p> La música es un estímulo AUDITIVO ...</p>
+
+  <font size=6 Color="white">
+<p> Regresar a pagina 1: <a src="/pagina2.html/">Pagina Principal</a>.</p>
+</font>
 </BODY>
 </html>
