--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
 </audio>
 </center>
 
+<p> Ir a pagina 2: <a src="/pagina2.html/">Pagina 2</a>.</p>
+  
 
 <!-- reloj https://www.zeitverschiebung.net/-->
 <center>
 <div style="text-align:center;padding:1em 0;"> <h2><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/es/city/3983058"><span style="color:gray;">Hora actual en</span><br />Silao, México</a></h2> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=es&size=large&timezone=America%2FMexico_City" width="100%" height="140" frameborder="0" seamless></iframe> </div>
 </center>
 
+
+  
 
 </body>
 </html>
