--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 </audio>
 </center>
 
-<p> Ir a pagina 2: <a src="/pagina2.html/">Pagina 2</a>.</p>
-  
+  <font size=6 Color="white">
+<a src="pagina2.html">Ir a pagina 2:</a>
+  </font>
 
 <!-- reloj https://www.zeitverschiebung.net/-->
 <center>
