--- a/pagina2.html
+++ b/pagina2.html
@@ -8,7 +8,7 @@
   <p> La música es un estímulo AUDITIVO ...</p>
 
   <font size=6 Color="white">
-<p> Regresar a pagina 1: <a src="/index.html/">Pagina Principal</a>.</p>
+<p> Regresar a pagina 1: <a src="index.html">Pagina Principal</a>.</p>
 </font>
 </BODY>
 </html>
