--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <center>
 <font size=6 Color="white">
-<a href="pagina2.html/">Pagina2</a>
+<a href="pagina2.html">Pagina2</a>
   </font>
   </center>
   
