--- a/pagina2.html
+++ b/pagina2.html
@@ -6,9 +6,18 @@
 <BODY>
   <H4> ESTA ES LA SEGUNDA PAGINA DEL PROYECTO</H4>
   <p> La música es un estímulo AUDITIVO ...</p>
-
-  <font size=6 Color="white">
-<p> Regresar a pagina 1: <a href="index.html">Pagina Principal</a>.</p>
-</font>
+<form>
+  <input type="text" required="">
+  <input type="password" required="">
+  <input type="number">
+  <input type="email">
+   <input type="color">
+   <input type="range" min="1" max="10">
+   <input type="date">
+   <input type="time">
+   <input type="button" value="boton">
+  <textarea></textarea>
+   <input type="submit">
+</form>
 </BODY>
 </html>
